# cool-os

./: .gitignore  Cargo.toml  HARDWARE.md  Makefile  README.md  ROADMAP.md  x86_64-unknown-none.json
.cargo/: config.toml
disk-image/: Cargo.toml
disk-image/src/: fs_image.rs  main.rs
scripts/: generate_tls_roots.py  ppm_visual_assert.py  qemu_hotplug_smoke.py  qemu_smoke.py  secure_boot_artifacts.py
src/: abi.rs  accessibility.rs  acpi.rs  ahci.rs  allocator.rs  app_lifecycle.rs  app_metadata.rs  ata.rs  boot_health.rs  boot_splash.rs  browser_engine.rs  browser_session.rs  browser_storage.rs  config_store.rs  coolfs.rs  crashdump.rs  desktop_settings.rs  device_registry.rs  disk_layout.rs  drivers.rs  elf.rs  entropy.rs  evented.rs  fat32.rs  font.rs  framebuffer.rs  fs_hardening.rs  futex.rs  fw_cfg.rs  gdt.rs  hardware.rs  installer.rs  interrupts.rs  jobs.rs  keyboard.rs  klog.rs  main.rs  memory.rs  memory_pressure.rs  mouse.rs  (+32 more)
src/apps/: browser.rs  colorpicker.rs  displaysettings.rs  filemanager.rs  mod.rs  personalize.rs  sysmon.rs  system_monitor.rs  terminal.rs  text_viewer.rs  textviewer.rs  theme.rs  user_gui.rs  usergui.rs  utilities.rs
src/apps/browser/: css.rs  html.rs  images.rs  layout.rs  mod.rs  pages.rs  render.rs  script.rs  state.rs  types.rs  url.rs
src/apps/file_manager/: layout.rs  mod.rs
src/apps/filemanager/: actions.rs  drawing.rs  modals.rs  model.rs
src/apps/terminal/: commands.rs  mod.rs  paths.rs  render.rs  state.rs
src/font/: modern8x8.rs
src/net/: http.rs  mod.rs  protocol.rs  sockets.rs
src/syscall/: core.rs  fs.rs  mod.rs  net_gui.rs  poll.rs  process.rs  user_memory.rs
src/usb/: mod.rs  xhci.rs
src/usb/xhci/: control.rs  discovery.rs  hid.rs  init.rs  mass_storage.rs  mod.rs  ports.rs  rings.rs  runtime.rs
src/wm/: compositor.rs  mod.rs  window.rs
src/wm/compositor/: desktop.rs  dialogs.rs  greeter.rs  icons.rs  notifications.rs  primitives.rs  start_menu.rs  taskbar.rs
userspace/hello/: Cargo.toml
userspace/hello/src/: main.rs  utilgui.rs
userspace/libcool/: Cargo.toml
userspace/libcool/src/: args.rs  dynlink.rs  (+17 more)
