[package]
name = "hello_user"
version = "0.1.0"
edition = "2021"

[dependencies]
libcool = { path = "../libcool" }

[[bin]]
name = "terminal"
path = "src/bin/terminal.rs"

[[bin]]
name = "netdemo"
path = "src/bin/netdemo.rs"

[[bin]]
name = "wget"
path = "src/bin/wget.rs"

[[bin]]
name = "sdkdemo"
path = "src/bin/sdkdemo.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
