[package]
name = "hello_user"
version = "0.1.0"
edition = "2021"

[dependencies]
libcool = { path = "../libcool" }

[[bin]]
name = "terminal"
path = "src/bin/terminal.rs"

[[bin]]
name = "netdemo"
path = "src/bin/netdemo.rs"

[[bin]]
name = "wget"
path = "src/bin/wget.rs"

[[bin]]
name = "sdkdemo"
path = "src/bin/sdkdemo.rs"

[[bin]]
name = "guidemo"
path = "src/bin/guidemo.rs"

[[bin]]
name = "notes"
path = "src/bin/notes.rs"

[[bin]]
name = "editor"
path = "src/bin/editor.rs"

[[bin]]
name = "trash"
path = "src/bin/trash.rs"

[[bin]]
name = "screenshot"
path = "src/bin/screenshot.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
